[gd_scene load_steps=13 format=2]

[ext_resource path="res://models/Jaeger.tres" type="ArrayMesh" id=1]
[ext_resource path="res://sprites/LoadingParticle.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/jaeger/Jaeger.gd" type="Script" id=5]
[ext_resource path="res://scenes/enemies/jaeger/projectiles/JaegerProjectile.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/jaeger/shrapnel/JaegerShrapnel.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape" id=4]
radius = 9.94817
height = 2.53936

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:rotation_degrees:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.01, 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "blowback"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ShipMesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 90, -1.70755e-06, 0 ), Vector3( 69.129, 0, 30 ), Vector3( 79.672, 0, -30 ), Vector3( 90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShipMesh:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -6.10421e-07, 0, 4.04264 ), Vector3( -1.2246e-07, 0, 0.811018 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ShipCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "explosion"
step = 0.02
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.7, 0.86, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -180, -0.25, 0, 0.25, 0, -188, -0.24, -86, 0.247025, 88.5173, -158, -0.22, -117, 0.243584, 129.542, -191, -0.113831, -165.055, 0.12, 174, -162, -0.0358155, 45.1896, 0.192592, -243 ),
"times": PoolRealArray( 0, 0.32, 0.6, 0.84, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.7, 0.86, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.01, 0.01, 0.01 ), Vector3( 0.01, 0.01, 0.01 ), Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.82 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_shrapnel"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ShipCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )
emission_enabled = true
emission = Color( 0.501961, 0.360784, 0.360784, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.5
emission_shape = 5
emission_ring_radius = 3.0
emission_ring_inner_radius = 2.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
radial_accel = -30.92
radial_accel_random = 0.46
angle_random = 1.0

[sub_resource type="QuadMesh" id=10]
size = Vector2( 0.5, 0.5 )

[node name="EnemyJaeger" type="Area" groups=["enemies"]]
transform = Transform( -0.01, 0, 8.74228e-10, 0, 0.01, 0, -8.74228e-10, 0, -0.01, 0, 0, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )
projectile = ExtResource( 6 )
shrapnel = ExtResource( 7 )

[node name="ShipMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
generate_lightmap = false
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null

[node name="ShipCollision" type="CollisionShape" parent="."]
shape = SubResource( 4 )
disabled = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/blowback = SubResource( 5 )
anims/explosion = SubResource( 7 )

[node name="LoadedCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="LoadingParticles" type="Particles" parent="."]
transform = Transform( 6, 0, -3.82137e-15, -2.29282e-14, 2.62268e-07, -1, 0, 6, 4.37114e-08, 0, 0, 0 )
material_override = SubResource( 9 )
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="LoadedCooldown" to="." method="_on_loaded_cooldown_timeout"]
